@@ -14,6 +14,8 @@ Comments= <<EOT
 - Move t/pod.t into xt/author/.
 - Rename CHANGES to Changes as per CPAN::Spec::Changes
 - Change format of dates in this file.
+- Rename t/load.t to t/report.t, and make it run scripts/report.statistics.pl for a real test.
+- Refromat lines in this file to be <= 100 chars wide, as per my new policy.
 EOT
 
 [V 1.02]
@@ -24,7 +26,8 @@ Comments= <<EOT
 - In the FAQ, clarify use of NFC() rather than NFD().
 - Add scripts/get.statoids.pl in case we need their FIPS 10-4 codes one day.
 - Add scripts/get.fips.pages.pl and data/List_of_FIPS_region_codes_*.html.
-- Add scripts/populate.fips.pages.pl, data/wikipedia.fips.codes.txt and data/wikipedia.fips.mismatch.log.
+- Add scripts/populate.fips.pages.pl, data/wikipedia.fips.codes.txt and
+data/wikipedia.fips.mismatch.log.
 - Update the POD re the new files.
 - Update the pre-reqs.
 EOT
