@@ -1,5 +1,0 @@
-use Test::More tests => 1;
-
-# ------------------------
-
-BEGIN{ use_ok('WWW::Scraper::Wikipedia::ISO3166'); }
